change config directory

--- a/config/config.yml
+++ b/config/config.yml
@@ -6,15 +6,15 @@ divisions:
   A: [TKARK, TKATK, MPARC, MPDSD]
   AE: [TAFFS]
   E: [TKELT, TKMED, MPBME, MPCOM, MPEES, MPEPO, MPWPS]
-  F: [TKTFY, MPAPP, MPCAS, MPNAT, MPPAS, MPPHS, TKTEM, MPENM]
+  F: [TKTFY, MPAPP, MPCAS, MPNAT, MPPAS, MPPHS, TKTEM, MPENM, MPLOL]
   H: [TIDAL, TIMEL, TIMAL, TIDSL, TIELL, TIEPL]
   I: [TKIEK, MPBDP, MPMEI, MPQOM, MPSCM]
-  K: [TKKMT, TIKEL]
-  KFKB: [TKBIO, TKKEF, MPBIO, MPISC, MPMCN]
-  M: [TKMAS, MPAEM, MPAME, MPAUT, MPPDE, MPPEN]
-  Sjö: [TISJL, TSILO, TSJKL, TSLOG, MPMAR, MPNAV, SBVII]
+  K: [TKKMT, TIKEL, MPMCN]
+  KFKB: [TKBIO, TKKEF, MPBIO, MPISC, ]
+  M: [TKMAS, MPAEM, MPAME, MPAUT, MPPDE, MPPEN, MPNAV, MPTSE]
+  Sjö: [TISJL, TSILO, TSJKL, TSLOG, MPMAR, SBVII]
   TB: [ZBASD, ZBASS]
   TD: [TKDES, MPDES]
   V: [TKSAM, TISAM, MPDCF, MPDCM, MPIEE, MPSEB, MPSOV]
   Z: [TKAUT, MPSYS]
-  Other: [KPLOL, MPLOL]
+  Other: [KPLOL]
