--- a/config/config.yml
+++ b/config/config.yml
@@ -10,7 +10,7 @@ divisions:
   H: [TIDAL, TIMEL, TIMAL, TIDSL, TIELL, TIEPL]
   I: [TKIEK, MPBDP, MPMEI, MPQOM, MPSCM]
   K: [TKKMT, TIKEL, MPMCN]
-  KFKB: [TKBIO, TKKEF, MPBIO, MPISC, ]
+  KFKB: [TKBIO, TKKEF, MPBIO, MPISC, TKGBS]
   M: [TKMAS, MPAEM, MPAME, MPAUT, MPPDE, MPPEN, MPNAV, MPTSE]
   Sjö: [TISJL, TSILO, TSJKL, TSLOG, MPMAR, SBVII]
   TB: [ZBASD, ZBASS]
